# tray-icon-node

./: Cargo.toml  Cross.toml  README.md  package.json
.github/workflows/: ci.yml  lint.yml
examples/: dev.ts
src/: common.rs  icon.rs  lib.rs  menu.rs  tray.rs
tests/: index.test.ts
