[package]
name = "tray-icon-node"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "tray_icon_node"

[package.metadata.napi]
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]

[dependencies]
napi = { version = "2.12.2", features = ["napi9", "async"] }
napi-derive = "2.12.2"
tray-icon = { version = "0.21.3" }
tokio = { version = "1", features = ["full"] }
image = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
